updated api and tests
